@@ -40,6 +40,11 @@
 %000000    wire [7:0] cyc_copy = cyc[7:0];
 %000002    wire       toggle_up;
         
+           typedef struct {
+              int q[$];
+           } str_queue_t;
+           str_queue_t str_queue;
+        
            alpha a1 (/*AUTOINST*/
                      // Outputs
                      .toggle_up                 (toggle_up),
@@ -71,7 +76,7 @@
            // CHECK_COVER_MISSING(-1)
         
            always @ (posedge clk) begin
-              if (cyc!=0) begin
+              if (cyc != 0) begin
                  cyc <= cyc + 1;
                  memory[cyc + 'd100] <= memory[cyc + 'd100] + 2'b1;
                  toggle <= '0;
@@ -79,13 +84,15 @@
                  stoggle.b <= toggle;
                  utoggle.val1 <= real'(cyc[7:0]);
                  ptoggle[0][0] <= toggle;
-                 if (cyc==3) begin
+                 if (cyc == 3) begin
+                    str_queue.q.push_back(1);
                     toggle <= '1;
                  end
-                 if (cyc==4) begin
+                 if (cyc == 4) begin
+                    if (str_queue.q.size() != 1) $stop;
                     toggle <= '0;
                  end
-                 else if (cyc==10) begin
+                 else if (cyc == 10) begin
                     $write("*-* All Finished *-*\n");
                     $finish;
                  end
