@@ -39,6 +39,11 @@ module t (/*AUTOARG*/
    wire [7:0] cyc_copy = cyc[7:0];
    wire       toggle_up;
 
+   typedef struct {
+      int q[$];
+   } str_queue_t;
+   str_queue_t str_queue;
+
    alpha a1 (/*AUTOINST*/
              // Outputs
              .toggle_up                 (toggle_up),
@@ -70,7 +75,7 @@ module t (/*AUTOARG*/
    // CHECK_COVER_MISSING(-1)
 
    always @ (posedge clk) begin
-      if (cyc!=0) begin
+      if (cyc != 0) begin
          cyc <= cyc + 1;
          memory[cyc + 'd100] <= memory[cyc + 'd100] + 2'b1;
          toggle <= '0;
@@ -78,13 +83,15 @@ module t (/*AUTOARG*/
          stoggle.b <= toggle;
          utoggle.val1 <= real'(cyc[7:0]);
          ptoggle[0][0] <= toggle;
-         if (cyc==3) begin
+         if (cyc == 3) begin
+            str_queue.q.push_back(1);
             toggle <= '1;
          end
-         if (cyc==4) begin
+         if (cyc == 4) begin
+            if (str_queue.q.size() != 1) $stop;
             toggle <= '0;
          end
-         else if (cyc==10) begin
+         else if (cyc == 10) begin
             $write("*-* All Finished *-*\n");
             $finish;
          end
