@@ -45,6 +45,7 @@ Verilator 5.021 devel
 * Fix tracing chandles (#4860). [Nathan Graybeal]
 * Fix $fwrite of null (#4862). [Jose Tejada]
 * Fix GCC tautological-compare warnings.
+* Fix compile error on structs with queues (and ignore toggle coverage on queues).
 
 
 Verilator 5.020 2024-01-01
